--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block navbar %} 
+    
 <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -22,3 +25,4 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
+    {% endblock %}
