--- a/teams/templates/teams/players.html
+++ b/teams/templates/teams/players.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{ team }}
-{{ player.player_name }}
-{{ player.player_number }}
-{{ player.player_position }}
-{{ player.email }}
+
+<h1>{{ team }} - #{{ player.player_number }}</h1>
+
+<h3>{{ player.player_name }}</h3>
+<h4><strong>Position: </strong>{{ player.player_position }}</h4>
+<h5><strong>Contact: </strong>{{ player.email }}</h5>
 
 {% endblock %}
