--- a/templates/register.html
+++ b/templates/register.html
@@ -1,31 +1,80 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>TeamBeam Sign Up</title>
-    </head>
+{% extends "base.html" %}
 
-    <body>
-        <h1>Register with TeamBeam</h1>
+{% block content %}
+<style>
+body {
+padding-top: 40px;
+padding-bottom: 40px;
+background-color: #eee;
+}
 
+.form-register {
+max-width: 430px;
+padding: 15px;
+margin: 0 auto;
+}
+.form-register .form-register-heading,
+.form-register .checkbox {
+margin-bottom: 10px;
+}
+.form-register .checkbox {
+font-weight: normal;
+}
+.form-register .form-control {
+position: relative;
+height: auto;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+padding: 10px;
+font-size: 16px;
+}
+.form-register .form-control:focus {
+z-index: 2;
+}
+.form-register input[type="email"] {
+margin-bottom: -1px;
+border-bottom-right-radius: 0;
+border-bottom-left-radius: 0;
+}
+.form-register input[type="password"] {
+margin-bottom: 10px;
+border-top-left-radius: 0;
+border-top-right-radius: 0;
+}
+#signup{
+float:right;
+}
+</style>
         {% if registered %}
-        <strong>Thank you for registering with TeamBeam!</strong>
-        <a href="/">Return to the homepage.</a><br />
+                <strong>Thank you for registering with TeamBeam!</strong>
+                <a href="/login">Return to the login page.</a><br />
         {% else %}
-        <strong>register here!</strong><br />
-
-        <form id="user_form" method="post" action="/register/"
+                <form class="form-register" id="register" method="post" action="/register/"
                 enctype="multipart/form-data">
+                
+                {% csrf_token %}
+                <h3 class="form-signin-heading">Register with TeamBeam</h3>
+                <!-- Display each form. The as_p method wraps each element in a paragraph
+                (<p>) element. This ensures each element appears on a new line,
+                making everything look neater. 
+                {{ user_form.as_p }}-->
 
-            {% csrf_token %}
-
-            <!-- Display each form. The as_p method wraps each element in a paragraph
-                 (<p>) element. This ensures each element appears on a new line,
-                 making everything look neater. -->
-            {{ user_form.as_p }}
-
-            <!-- Provide a button to click to submit the form. -->
-            <input type="submit" name="submit" value="Register" />
-        </form>
+                {% if error %}
+                        {{ error }}
+                {% endif %}
+                <label for="id_username" class="sr-only">Username</label>
+                <input type="text" id="id_username" class="form-control" placeholder="Username" name="username" value="" size="30" required autofocus>
+                <label for="id_email" class="sr-only">Email address</label>
+                <input type="email" id="id_email" class="form-control" placeholder="Email" name="email" value="" size="75" required>
+                <label for="id_password" class="sr-only">Password</label>
+                <input type="password" id="id_password" class="form-control" placeholder="Password" name="password" value="" size="50"  required>
+                <label for="id_fname" class="sr-only">First Name</label>
+                <input type="text" id="id_fname" class="form-control" placeholder="First Name" name="first_name" value="" size="30" required>
+                <label for="id_lname" class="sr-only">Last Name</label>
+                <input type="text" id="id_lname" class="form-control" placeholder="Last Name" name="last_name" value="" size="30" required>
+                <!-- Provide a button to click to submit the form. -->
+                <button class="btn btn-lg btn-primary btn-block" type="submit" value="Register" name="submit">Register</button>
+                </form>
         {% endif %}
-    </body>
-</html>
+{% endblock %}
