--- a/teams/templates/teams/roster.html
+++ b/teams/templates/teams/roster.html
@@ -1,6 +1,10 @@
 {% extends "user_base.html" %}
 
 {% block content %}
+
+<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#Add_Players">
+  Add Players
+</button>
 {% if team_list %}
 <table class="table table-striped">
       <thead>
@@ -16,7 +20,7 @@
         <tr>
           <td>{{ player.player_number }}</td>
           <td><a href="/teams/{{ player.team_id }}/roster/player/{{ player.id }}/">{{ player.player_name }}</a></td>
-          <td>{{ player.email }}</td>
+          <td>{{ player.username.email }}</td>
           <td>{{ player.player_position }}</td>
         </tr>
     {% endfor %}
@@ -25,4 +29,22 @@
 {% else %}
     <p>No Players are available.</p>
 {% endif %}
+<!-- Modal -->
+<div class="modal fade" id="Add_Players" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h3 class="modal-title" id="myModalLabel">Add Players to the Roster!</h3>
+      </div>
+      <div class="modal-body">
+        <h4>Send players the following link to add their account to the {{ team.team_name }} roster!</h4>
+        <h5>https://teambeam-gmihalik.c9.io/teams/3576f013-fcc9-4616-872c-82dcf454de2b/Join/</h5>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
