--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,88 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% block content %}
-<h1>oops</h1>
+
+<link rel="stylesheet" href="{% static "teambeam/css/home.css" %}">
+
+<!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="{% static "teambeam/img/Blue.png" %}" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Beam your Team with TeamBeam</h1>
+              <p>No matter the sport! Simplify your team management with TeamBeam</p>
+              <p><a class="btn btn-lg btn-primary" href="/register" role="button">Sign up for FREE today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="{% static "teambeam/img/Blue.png" %}" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Features of Success</h1>
+              <p>Explore TeamBeam's features with this great walkthrough to see how TeamBeam can help you find your formula for success!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="{% static "teambeam/img/Blue.png" %}" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+    <hr/>
+    
+<div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h1><i class="fa fa-calendar fa-3x"></i></h1>
+          <h2>Game Scheduling</h2>
+          <p>Up to the minute game scheduling, set 1 game/event or setup the whole season and let teammates set their availability!</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <h1><i class="fa fa-trophy fa-3x"></i></h1>
+          <h2>Trophy</h2>
+          <p>Sign up for the secret to success</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <h1><span class="fa-stack fa-lg">
+              <i class="fa fa-envelope fa-stack-1x"></i>
+              <i class="fa fa-ban fa-stack-2x text-danger"></i>
+            </span></h1>
+          <h2>No More Email Threads!</h2>
+          <p>Organize your team all in one place without the confusioning and endless email chains!</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+</div>
 {% endblock %}
 
 
