Updated UI with relevant Font Awesome Icons, Added Availability Model, Enhanced UI for events form

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
           <img class="first-slide" src="{% static "teambeam/img/Blue.png" %}" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Beam your Team with TeamBeam</h1>
+              <i class="fa fa-bullhorn fa-5x"></i><i class="fa fa-wifi fa-rotate-90 fa-5x"></i><i class="fa fa-users fa-5x"></i>
+              <h1>Beam your Team</h1>
               <p>No matter the sport! Simplify your team management with TeamBeam</p>
               <p><a class="btn btn-lg btn-primary" href="/register" role="button">Sign up for FREE today</a></p>
             </div>
