--- a/teams/templates/teams/roster.html
+++ b/teams/templates/teams/roster.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#Add_Players">
-  Add Players
+  <i class="fa fa-user-plus"></i> Add Players
 </button>
 {% if team_list %}
 <table class="table table-striped">
