--- a/templates/base.html
+++ b/templates/base.html
@@ -38,17 +38,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">TeamBeam</a>
+          <a class="navbar-brand" href="/"><i class="fa fa-rss fa-rotate-270 text-primary"></i>TeamBeam</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li><a href="/teams"><i class="fa fa-user"></i> - {{user.username}}</a></li>
-            <li><a href="/logout">Logout</a></li>
+            <li><a href="/teams"><i class="fa fa-user-secret"></i> - {{user.username}}</a></li>
+            <li><a href="/logout"><i class="fa fa-power-off"></i> Logout</a></li>
             {% else %}
-            <li><a href="/login">Login</a></li>
+            <li><a href="/login"><i class="fa fa-user"></i> Login</a></li>
             {% endif %}
-            <li><a href="#">Help</a></li>
+            <li><a href="#"><i class="fa fa-life-ring"></i> Help</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
