--- a/templates/user_base.html
+++ b/templates/user_base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,10 +14,11 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="./user_base.css" />
+    
+    <link rel="stylesheet" href="{% static "teambeam/css/user_base.css" %}">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,113 +26,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-<style>
-  /*
- * Base structure
- */
-
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-}
-
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
-}
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-.navbar-fixed-top {
-  border: 0;
-}
-
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-
-
-/*
- * Placeholder dashboard ideas
- */
-
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
-}
-.placeholders h4 {
-  margin-bottom: 0;
-}
-.placeholder {
-  margin-bottom: 20px;
-}
-.placeholder img {
-  display: inline-block;
-  border-radius: 50%;
-}
-</style>
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -142,17 +37,17 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">TeamBeam</a>
+        <a class="navbar-brand" href="/"><i class="fa fa-rss fa-rotate-270 text-primary"></i>TeamBeam</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li><a href="/teams"><i class="fa fa-user"></i> - {{user.username}}</a></li>
-            <li><a href="/logout">Logout</a></li>
+            <li><a href="/teams"><i class="fa fa-user-secret"></i> - {{user.username}}</a></li>
+            <li><a href="/logout"><i class="fa fa-power-off"></i> Logout</a></li>
             {% else %}
-            <li><a href="/login">Login</a></li>
+            <li><a href="/login"><i class="fa fa-user"></i> Login</a></li>
             {% endif %}
-            <li><a href="#">Help</a></li>
+            <li><a href="#"><i class="fa fa-life-ring"></i> Help</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
@@ -165,12 +60,12 @@ body {
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="/teams/">Dashboard</a></li>
+            <li><a href="/teams/"><i class="fa fa-tachometer"></i> Dashboard</a></li>
             <li style="border-bottom:solid black 2px; padding-left:15px"><h3>{{ team.team_name }}</h3></li>
-            <li class="{{active.overview}}"><a href="/teams/{{ team_id }}/">Overview <span class="sr-only">(current)</span></a></li>
-            <li class="{{active.roster}}"><a href="/teams/{{ team_id }}/roster">Roster</a></li>
-            <li><a href="#">Schedule</a></li>
-            <li><a href="#">Availability</a></li>
+            <li class="{{active.overview}}"><a href="/teams/{{ team_id }}/"><i class="fa fa-binoculars"></i> Overview <span class="sr-only">(current)</span></a></li>
+            <li class="{{active.roster}}"><a href="/teams/{{ team_id }}/roster"><i class="fa fa-users"></i> Roster</a></li>
+            <li class="{{active.schedule}}"><a href="/teams/{{ team_id }}/schedule"><i class="fa fa-calendar"></i> Schedule</a></li>
+            <li><a href="#"><i class="fa fa-check-square-o"></i> Availability</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
