--- a/leagues/templates/leagues/events.html
+++ b/leagues/templates/leagues/events.html
@@ -14,6 +14,13 @@
   <thead>
     <tr>
       <th>Upcoming Events</th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <th>Date/Time</th>
+      <th>Event Info</th>
+      <th>Location</th>
     </tr>
   </thead>
   <tbody>
@@ -32,6 +39,38 @@
     {% endif %}
   </tbody>
 </table>
+
+<hr/>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Recent Events</th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <th>Date/Time</th>
+      <th>Event Info</th>
+      <th>Location</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% if recent_event_list %}
+      {% for event in recent_event_list %}
+          <tr>
+            <td>{{ event.event_date }}</td>
+            <td><a href="#">{{ event.event_name }}</a></td>
+            <td>{{ event.event_location }}</td>
+          </tr>
+      {% endfor %}
+    {% else %}
+      <tr>
+        <td>No recent events available</td>
+      </tr>
+    {% endif %}
+  </tbody>
+</table>
+
 <!-- Modal -->
 <div class="modal fade" id="Add_Events" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
