Updated availability module (Check for errors), implemented visual availability for users

--- a/teams/templates/teams/dashboard.html
+++ b/teams/templates/teams/dashboard.html
@@ -54,7 +54,7 @@ margin-top:50px;
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Recent Activity</th>
+      <th>Recent Events</th>
     </tr>
   </thead>
   <tbody>
