--- a/templates/user_base.html
+++ b/templates/user_base.html
@@ -65,7 +65,7 @@
             <li class="{{active.overview}}"><a href="/teams/{{ team_id }}/"><i class="fa fa-binoculars"></i> Overview <span class="sr-only">(current)</span></a></li>
             <li class="{{active.roster}}"><a href="/teams/{{ team_id }}/roster"><i class="fa fa-users"></i> Roster</a></li>
             <li class="{{active.schedule}}"><a href="/teams/{{ team_id }}/schedule"><i class="fa fa-calendar"></i> Schedule</a></li>
-            <li><a href="#"><i class="fa fa-check-square-o"></i> Availability</a></li>
+            <li class="{{active.availability}}"><a href="/teams/{{ team_id }}/availability"><i class="fa fa-check-square-o"></i> Availability</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
