--- a/leagues/templates/leagues/events.html
+++ b/leagues/templates/leagues/events.html
@@ -47,10 +47,12 @@
       <th>Recent Events</th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
     <tr>
       <th>Date/Time</th>
       <th>Event Info</th>
+      <th>Result</th>
       <th>Location</th>
     </tr>
   </thead>
@@ -61,6 +63,7 @@
             <td>{{ event.event_date }}</td>
             <td><a href="#">{{ event.event_name }}</a></td>
             <td>{{ event.event_location }}</td>
+            <td></td>
           </tr>
       {% endfor %}
     {% else %}
