--- a/teams/templates/teams/team_home.html
+++ b/teams/templates/teams/team_home.html
@@ -38,10 +38,33 @@ margin: 0 auto;
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Recent Activity</th>
+      <th>Recent Events</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <th>Date/Time</th>
+      <th>Event Info</th>
+      <th>Result</th>
+      <th>Location</th>
     </tr>
   </thead>
   <tbody>
+    {% if recent_event_list %}
+      {% for event in recent_event_list %}
+          <tr>
+            <td>{{ event.event_date }}</td>
+            <td><a href="#">{{ event.event_name }}</a></td>
+            <td>{{ event.event_location }}</td>
+            <td></td>
+          </tr>
+      {% endfor %}
+    {% else %}
+      <tr>
+        <td>No recent events available</td>
+      </tr>
+    {% endif %}
   </tbody>
 </table>
 
