--- a/teams/templates/teams/team_home.html
+++ b/teams/templates/teams/team_home.html
@@ -14,6 +14,13 @@ margin: 0 auto;
   <thead>
     <tr>
       <th>Upcoming Events</th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <th>Date/Time</th>
+      <th>Event Info</th>
+      <th>Location</th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +35,9 @@ margin: 0 auto;
     {% else %}
       <tr>
         <td>No upcoming events available</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     {% endif %}
   </tbody>
@@ -63,6 +73,9 @@ margin: 0 auto;
     {% else %}
       <tr>
         <td>No recent events available</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     {% endif %}
   </tbody>
